--- a/views/createBlog.ejs
+++ b/views/createBlog.ejs
@@ -41,8 +41,11 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Contact Us</h2>
+        <h2>Create Blogs</h2>
         <form action="/createBlog" method="POST">
+
+            <!-- <input type="text" id="image" placeholder='image' name="image" required  /> -->
+
             <label for="title">Name:</label>
             <input type="text" id="title" name="title" class="form-input" required>
 
