we imprement edit function in our code

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -85,7 +85,7 @@ button{
         <nav>
             <a href="#">Home</a>
             <a href="/createBlog">Create Blog</a>
-            <a href="#">Services</a>
+            <a href="#">Service</a>
             <a href="#">Contact</a>
         </nav>
     </header>
