--- a/views/singleBlog.ejs
+++ b/views/singleBlog.ejs
@@ -53,6 +53,8 @@
 
         .post-content {
             line-height: 1.6;
+            overflow: auto;
+            width: 100%;
         }
 
         .post-footer {
@@ -92,6 +94,7 @@ button{
             Published on <%- blog[0].createdAt.toISOString().slice(0,10) %>
         </div>
         <button><a href="/delete/<%-blog[0].id%>">Delete</a></button>
+        <button><a href="/edit/<%-blog[0].id%>">Edit</a></button>
     </div>
 </body>
 </html>
