Here we link ecternal css to page and make component of html page

--- a/views/createBlog.ejs
+++ b/views/createBlog.ejs
@@ -43,6 +43,7 @@
     </style>
 </head>
 <body>
+    <%- include('components/navbar') %>
     <div class="form-container">
         <h2>Create Blogs</h2>
         <form action="/createBlog" method="POST">
