--- a/views/singleBlog.ejs
+++ b/views/singleBlog.ejs
@@ -78,6 +78,7 @@ button{
         <h1>CMS</h1>
     </header>
 
+    <%- include('components/navbar') %>
     <div class="container">
         <div class="author-info">
      
