--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -4,34 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
+    <link rel="stylesheet" href="css/blog.css">
     <style>
         body{
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-nav {
-    display: flex;
-    gap: 2rem;
-    
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-
 }
 
 .container {
@@ -80,16 +59,8 @@ button{
     </style>
 </head>
 <body>
-    <header>
-        <h3>Blog OS</h3>
-        <nav>
-            <a href="#">Home</a>
-            <a href="/createBlog">Create Blog</a>
-            <a href="#">Service</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-
+   
+    <%- include('components/navbar') %>
     <div class="container">
         <%  blogs.map((blog)=>{ %>
             <div class="card">
